# simple-agent-harness

./: .gitignore  Cargo.toml  PROGRESS.txt  PROGRESS_LOG.txt  PROMPT.md  README.md  bd-finish.sh  blacksmith.toml  harness.toml
.beads/: config.yaml  issues.jsonl
.claude/skills/break-down-issue/: SKILL.md
.claude/skills/prd-to-beads/: SKILL.md
.claude/skills/self-improvement/: SKILL.md
.github/workflows/: release.yml
blacksmith-ui/: Cargo.toml
blacksmith-ui/frontend/: app.js  index.html  style.css
blacksmith-ui/src/: discovery.rs  main.rs  poller.rs
defaults/: ANALYSIS_PROMPT.md  PROMPT.md  bd-finish.sh  blacksmith.toml
docs/: README.md  adapters.md  architecture-analysis.md  architecture-overview.md  cli-reference.md  configuration.md  core-loop.md  dashboard.md  deployment.md  getting-started.md  metrics.md  multi-agent.md  troubleshooting.md
prd/: IDEAS.txt  SPEC-v2-metrics.md  SPEC-v3-agents.md  SPEC-v6-dashboard.md
scripts/: install.sh  release.sh  smoke-test-ui.sh
src/: architecture_pipeline.rs  architecture_runner.rs  boundary_violation.rs  brief.rs  circular_dep.rs  commit.rs  config.rs  coordinator.rs  cycle_detect.rs  data_dir.rs  db.rs  defaults.rs  expansion_event.rs  fan_in.rs  file_resolution.rs  finish.rs  gc.rs  god_file.rs  hooks.rs  import_graph.rs  ingest.rs  init.rs  integrator.rs  intent.rs  main.rs  metadata_regen.rs  metrics.rs  metrics_cmd.rs  migration_apply.rs  migration_map.rs  pool.rs  preflight.rs  prompt.rs  proposal_generation.rs  proposal_validation.rs  public_api.rs  ratelimit.rs  retention.rs  runner.rs  scheduler.rs  (+11 more)
src/adapters/: claude.rs  codex.rs  mod.rs
templates/: PROMPT.md.tmpl
