[workspace]
members = [".", "blacksmith-ui"]

[package]
name = "blacksmith"
version = "0.1.3"
edition = "2021"
description = "A Rust CLI tool that runs an AI coding agent in a supervised loop"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tokio = { version = "1", features = ["full"] }
nix = { version = "0.29", features = ["signal", "process"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
glob = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
tempfile = "3"
zstd = "0.13"
fs2 = "0.4"
axum = { version = "0.8", optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
socket2 = { version = "0.5", optional = true }
tokio-stream = { version = "0.1", optional = true }

[features]
default = ["serve"]
serve = ["axum", "tower-http", "socket2", "tokio-stream"]

[profile.dev]
debug = "line-tables-only"   # Shrink debug info ~60%; backtraces still work

[profile.release]
opt-level = 1       # Fast compile (~debug speed), small artifacts (~release size)
debug = false

[dev-dependencies]
filetime = "0.2.27"
tower = "0.5"
