[package]
name = "blacksmith-ui"
version = "0.1.1"
edition = "2021"
description = "Multi-project dashboard for blacksmith"

[dependencies]
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
socket2 = { version = "0.5", features = ["all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust-embed = "8"
mime_guess = "2"
